test/bad/generics/call02.px

func f<Num T>(T x, T y) def
    return

f(0, 0.0)
